@startuml
hide circle
skinparam classAttributeIconSize 0

class BillDetailController {
    - _billDetailRepository: IBillDetailRepository 
    + UpdateBillDetail(Guid id, [FromBody] UpdateBillDetailRequestDTO updateBillDetail): Task<IActionResult>
}

interface IBillDetailRepository<<interface>>  {
    + UpdateBillDetail(Guid id, UpdateBillDetailRequestDTO updateBillDetail): Task<BillDetailResponseDTO> 

}

class BillDetailRepository {
    - _billDetailDAO : BillDetailDAO
    + UpdateBillDetail(Guid id, UpdateBillDetailRequestDTO updateBillDetail): Task<BillDetailResponseDTO> 
}

class BillDetailDAO {
    - _client: Client
    + UpdateBillDetail(Guid id, UpdateBillDetailRequestDTO updateBillDetail): Task<BillDetailResponseDTO> 
}

class BillDetail {
    +Id: Guid
    +MenuItemId: Guid
    +BillId: Guid
    +Quantity: int
    +Price: decimal
    +CreatedAt: DateTime
    +UpdatedAt: DateTime
}

BillDetailController -- IBillDetailRepository
IBillDetailRepository <|.. BillDetailRepository
BillDetailRepository -- BillDetailDAO
BillDetailDAO -- BillDetail

@enduml